--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,9 @@
-v0.4-0  (2017-02-06)
+v0.4-1  (2017-02-06)
 
   o 'read_ts_tables' has a new argument 'column.name',
     which specifies the format of column names in results
 
-  o there is a piblic repository at
+  o there is a public repository at
     https://gitlab.com/enricoschumann/tsdb
 
 v0.3-0  (2016-12-10)
