--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-2017-05-10  Enrico Schumann  <es@enricoschumann.net>
+2017-05-13  Enrico Schumann  <es@enricoschumann.net>
+
+	* DESCRIPTION (Version): Version: 0.4-6
 
 	* R/functions.R (read_ts_tables): safeguard for
 	empty files
