--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2017-05-26  Enrico Schumann  <es@enricoschumann.net>
+
+	* DESCRIPTION (Version): 0.4-8
+
+	* R/functions.R (write_ts_table): simplify code
+	for add/overwrite
+
+	* man/write_ts_table.Rd: update docs
+
 2017-05-22  Enrico Schumann  <es@enricoschumann.net>
 
 	* DESCRIPTION (Version): 0.4-7
