--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2017-10-24  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (as.zoo.ts_table): fix method
+
+	* inst/unitTests/ut_write_read.R
+	(test.ts_table): fix unit tests
+
+	* R/functions.R (ttime): 'strip.attr' is TRUE
+	by default (i.e. a timezone attribute is
+	dropped)
+
 2017-09-14  Enrico Schumann  <es@enricoschumann.net>
 
 	* R/functions.R (file_info): return more
