--- a/README.org
+++ b/README.org
@@ -429,10 +429,12 @@ In read_ts_tables(c("example1", "example2"), dir = "~/tsdb/daily",  :
 
    Attached to this matrix are several attributes:
 
-- timestamp :: a vector: the numeric representation of the timestamp, 
-- t.type :: character: the class of the original timestamp, either
-            =Date= or =POSIXct=
-- columns :: a character vector that provides the columns names
+- timestamp :: a vector: the numeric representation of
+               the timestamp
+- t.type :: character: the class of the original
+            timestamp, either =Date= or =POSIXct=
+- columns :: a character vector that provides the
+             columns names
 
 (There may be other attributes as well, but these three
 are always present.)
