--- a/README.org
+++ b/README.org
@@ -196,7 +196,7 @@ The written file will look like this:
 16805,5
 #+END_EXAMPLE
 
-You may notice that the dates been replaced by
+You may notice that the dates have been replaced by
 numbers. The mapping between these numbers and calendar
 times is described later, when we discuss the
 representation of timestamps.
@@ -467,7 +467,8 @@ dataframe or a similar data structure. Methods that
 perform such coercions are responsible for converting
 the numeric timestamp vector to an actual
 timestamp. For this, they may use the internal function
-=ttime= (translate time).
+=ttime=, whose pronounciation may remind you of a hot
+beverage, but which really stands for =translate time=.
 
 
 ** The file format
