--- a/ChangeLog
+++ b/ChangeLog
@@ -1,237 +1,251 @@
+2018-11-21  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/functions.R (write_ts_table): fix 'add' for
+        series going back before 1 Jan 1970. When data
+        was added to such a series, the history before
+        1970 was not rewritten (i.e. deleted)
+        (write_ts_tables): no longer set 'scipen',
+        i.e. numbers may now be written with scientific
+        notation, e.g. 1e10
+        (read_ts_tables): add 'ts_table' as a
+        'return.class'
+        (read_ts_tables): when start is missing, read
+        oldest timestamp from file from
+
 2018-03-21  Enrico Schumann  <es@enricoschumann.net>
 
-	* R/functions.R (write_ts_table): with
-	replace.file set to TRUE, check whether files
-	exists before removal (this avoids the warning
-	about non-existing files)
+        * R/functions.R (write_ts_table): with
+        replace.file set to TRUE, check whether files
+        exists before removal (this avoids the warning
+        about non-existing files)
 
 2018-02-02  Enrico Schumann  <es@enricoschumann.net>
 
-	* inst/tests/write_read.R: add timing test
+        * inst/tests/write_read.R: add timing test
 
 2017-12-11  Enrico Schumann  <es@enricoschumann.net>
 
-	* NAMESPACE: export 'ttime'
+        * NAMESPACE: export 'ttime'
 
 2017-11-16  Enrico Schumann  <es@enricoschumann.net>
 
-	* R/functions.R (write_ts_table): new argument
-	'replace.file', with default FALSE. If TRUE,
-	the specified file is *deleted* and then
-	replaced by the new ts_table
+        * R/functions.R (write_ts_table): new argument
+        'replace.file', with default FALSE. If TRUE,
+        the specified file is *deleted* and then
+        replaced by the new ts_table
 
 2017-11-14  Enrico Schumann  <es@enricoschumann.net>
 
-	* R/functions.R (file_info): simplify code;
-	return 't.type' as part of file information
+        * R/functions.R (file_info): simplify code;
+        return 't.type' as part of file information
 
 2017-10-24  Enrico Schumann  <es@enricoschumann.net>
 
-	* DESCRIPTION (Version): Version: 0.5-0
+        * DESCRIPTION (Version): Version: 0.5-0
 
-	* R/functions.R (ts_table): store timestamp as
-	numeric (which reverts the change introduced in
-	version 0.4-7; see ChangeLog 2017-05-22)
+        * R/functions.R (ts_table): store timestamp as
+        numeric (which reverts the change introduced in
+        version 0.4-7; see ChangeLog 2017-05-22)
 
-	* R/functions.R (as.zoo.ts_table): fix method
+        * R/functions.R (as.zoo.ts_table): fix method
 
-	* inst/unitTests/ut_write_read.R
-	(test.ts_table): fix unit tests
+        * inst/unitTests/ut_write_read.R
+        (test.ts_table): fix unit tests
 
-	* R/functions.R (ttime): 'strip.attr' is TRUE
-	by default (i.e. a timezone attribute is
-	dropped)
+        * R/functions.R (ttime): 'strip.attr' is TRUE
+        by default (i.e. a timezone attribute is
+        dropped)
 
 2017-09-14  Enrico Schumann  <es@enricoschumann.net>
 
-	* R/functions.R (file_info): return more
-	information about files; the function also does
-	not fail anymore if a file does not exist, but
-	reports the file as missing
-	(write_ts_table): fix add/overwrite: when these
-	options were TRUE but the file did not exist,
-	the function raised an error. Now the data are
-	written.
+        * R/functions.R (file_info): return more
+        information about files; the function also does
+        not fail anymore if a file does not exist, but
+        reports the file as missing
+        (write_ts_table): fix add/overwrite: when these
+        options were TRUE but the file did not exist,
+        the function raised an error. Now the data are
+        written.
 
 2017-06-08  Enrico Schumann  <es@enricoschumann.net>
 
-	* R/functions.R (read_ts_tables): rename
-	argument 'column.name' to 'column.names' (plural)
+        * R/functions.R (read_ts_tables): rename
+        argument 'column.name' to 'column.names' (plural)
 
 2017-05-26  Enrico Schumann  <es@enricoschumann.net>
 
-	* R/functions.R (write_ts_table): rename first
-	element to 'ts'
+        * R/functions.R (write_ts_table): rename first
+        element to 'ts'
 
 2017-05-26  Enrico Schumann  <es@enricoschumann.net>
 
-	* DESCRIPTION (Version): 0.4-8
+        * DESCRIPTION (Version): 0.4-8
 
-	* R/functions.R (write_ts_table): simplify code
-	for add/overwrite
+        * R/functions.R (write_ts_table): simplify code
+        for add/overwrite
 
-	* man/write_ts_table.Rd: update docs
+        * man/write_ts_table.Rd: update docs
 
 2017-05-22  Enrico Schumann  <es@enricoschumann.net>
 
-	* DESCRIPTION (Version): 0.4-7
+        * DESCRIPTION (Version): 0.4-7
 
-	* R/functions.R (ts_table): attribute
-	'timestamp' is now the actual datetime vector,
-	not its numeric representation (this reverts
-	some changes introduced with ChangeLog entry
-	of 2016-12-09)
+        * R/functions.R (ts_table): attribute
+        'timestamp' is now the actual datetime vector,
+        not its numeric representation (this reverts
+        some changes introduced with ChangeLog entry
+        of 2016-12-09)
 
-	* R/functions.R (ts_table): explicitly unname
-	'x' (i.e. drop column and row names)
+        * R/functions.R (ts_table): explicitly unname
+        'x' (i.e. drop column and row names)
 
 2017-05-16  Enrico Schumann  <es@enricoschumann.net>
 
-	* R/functions.R (write_ts_table): have empty
-	files written (such files will only contain one
-	line, the headers)
+        * R/functions.R (write_ts_table): have empty
+        files written (such files will only contain one
+        line, the headers)
 
-	* inst/unitTests/ut_write_read.R
-	(test.write_ts_table): add checks for writing
-	an empty file
+        * inst/unitTests/ut_write_read.R
+        (test.write_ts_table): add checks for writing
+        an empty file
 
 2017-05-13  Enrico Schumann  <es@enricoschumann.net>
 
-	* DESCRIPTION (Version): 0.4-6
+        * DESCRIPTION (Version): 0.4-6
 
 2017-05-10  Enrico Schumann  <es@enricoschumann.net>
 
-	* R/functions.R (read_ts_tables): safeguard for
-	empty files
-	(file_info): add function
+        * R/functions.R (read_ts_tables): safeguard for
+        empty files
+        (file_info): add function
 
-	* inst/unitTests/ut_write_read.R
-	(test.read_ts_tables): add test for empty files
+        * inst/unitTests/ut_write_read.R
+        (test.read_ts_tables): add test for empty files
 
 2017-05-09  Enrico Schumann  <es@enricoschumann.net>
 
-	* DESCRIPTION (Version): 0.4-5
+        * DESCRIPTION (Version): 0.4-5
 
-	* R/functions.R (write_ts_table): suppress
-	scientific notation when writing to file
+        * R/functions.R (write_ts_table): suppress
+        scientific notation when writing to file
 
-	* R/functions.R (write_ts_table): when ts_table
-	has zero rows, return(0) at once
-	(print.ts_table): suppress warnings when
-	ts_table has zero rows
+        * R/functions.R (write_ts_table): when ts_table
+        has zero rows, return(0) at once
+        (print.ts_table): suppress warnings when
+        ts_table has zero rows
 
 2017-05-08  Enrico Schumann  <es@enricoschumann.net>
 
-	* DESCRIPTION (Version): 0.4-4
-	(Suggests): add MonetDBLite
+        * DESCRIPTION (Version): 0.4-4
+        (Suggests): add MonetDBLite
 
-	* R/functions.R	(read_ts_tables): update for
-	changes in package datetimeutils (0.2-0)
+        * R/functions.R (read_ts_tables): update for
+        changes in package datetimeutils (0.2-0)
 
 2017-03-31  Enrico Schumann  <es@enricoschumann.net>
 
-	* DESCRIPTION (Version): 0.4-3
+        * DESCRIPTION (Version): 0.4-3
 
-	* R/functions.R (write_ts_table): fix handling
-	of argument 'overwrite': it had been
-	ignored (reported by Torsten von Bartenwerffer)
+        * R/functions.R (write_ts_table): fix handling
+        of argument 'overwrite': it had been
+        ignored (reported by Torsten von Bartenwerffer)
 
 2017-03-16  Enrico Schumann  <es@enricoschumann.net>
 
-	* R/functions.R (.columns, `.columns<-`)
-	(.t.type, `.t.type<-`): add internal functions
-	(write_ts_table): new argument 'backend'
-	(read_ts_tables): new argument 'backend'
+        * R/functions.R (.columns, `.columns<-`)
+        (.t.type, `.t.type<-`): add internal functions
+        (write_ts_table): new argument 'backend'
+        (read_ts_tables): new argument 'backend'
 
-	* NAMESPACE: import from package DBI
+        * NAMESPACE: import from package DBI
 
-	* R/functions.R (as.matrix.ts_table): add method
+        * R/functions.R (as.matrix.ts_table): add method
 
 2017-02-06  Enrico Schumann  <es@enricoschumann.net>
 
         * DESCRIPTION (Version): 0.4-1
 
-	* R/functions.R (read_ts_tables): new argument
-	'column.name' that specifies the pattern of column
-	names in results
+        * R/functions.R (read_ts_tables): new argument
+        'column.name' that specifies the pattern of column
+        names in results
 
 2017-01-04  Enrico Schumann  <es@enricoschumann.net>
 
         * DESCRIPTION (Version): 0.3-1
 
-	* R/functions.R (read_ts_tables): if 'start' is
-	missing, use 1970-1-1 (instead of the previous
-	365 days)
+        * R/functions.R (read_ts_tables): if 'start' is
+        missing, use 1970-1-1 (instead of the previous
+        365 days)
 
 2016-12-16  Enrico Schumann  <es@enricoschumann.net>
 
-	* R/functions.R (read_ts_tables): fix naming of
-	series when 'return.class' is 'zoo'
+        * R/functions.R (read_ts_tables): fix naming of
+        series when 'return.class' is 'zoo'
 
 2016-12-10  Enrico Schumann  <es@enricoschumann.net>
 
-	* DESCRIPTION (Version): 0.3-0
+        * DESCRIPTION (Version): 0.3-0
 
-	* R/functions.R (write_ts_table): new argument
-	'add'. If TRUE, only data for timestamps not in
-	a file is added.
+        * R/functions.R (write_ts_table): new argument
+        'add'. If TRUE, only data for timestamps not in
+        a file is added.
 
 2016-12-09  Enrico Schumann  <es@enricoschumann.net>
 
-	* DESCRIPTION (Version): Version: 0.2-1
+        * DESCRIPTION (Version): Version: 0.2-1
 
-	* R/functions.R (ts_table): store timestamp as
-	numeric; add new attribute 't.type' (either
-	Date or POSIXct)
-	(.timestamp): internal function
-	(`.timestamp<-`): internal function
+        * R/functions.R (ts_table): store timestamp as
+        numeric; add new attribute 't.type' (either
+        Date or POSIXct)
+        (.timestamp): internal function
+        (`.timestamp<-`): internal function
 
 2016-12-07  Enrico Schumann  <es@enricoschumann.net>
 
-	* inst/Tutorial/README.org: move README to
-	inst/Tutorial
+        * inst/Tutorial/README.org: move README to
+        inst/Tutorial
 
 2016-12-05  Enrico Schumann  <es@enricoschumann.net>
 
-	* DESCRIPTION (Version): 0.2-0
+        * DESCRIPTION (Version): 0.2-0
 
-	* README.org: add file
+        * README.org: add file
 
-	* NAMESPACE: export only 'read_ts_tables',
-	'write_ts_table', 'ts_table', 'as.ts_table'
+        * NAMESPACE: export only 'read_ts_tables',
+        'write_ts_table', 'ts_table', 'as.ts_table'
 
-	* R/functions.R (read_ts_tables): support
-	reading several columns from files
+        * R/functions.R (read_ts_tables): support
+        reading several columns from files
 
-	* R/functions.R (as.zoo.ts_table): export
-	method
+        * R/functions.R (as.zoo.ts_table): export
+        method
 
-	* man/*: add help files for all functions
+        * man/*: add help files for all functions
 
-	* inst/unitTests/ut_write_read.R
-	(test.ts_table): add unit tests
+        * inst/unitTests/ut_write_read.R
+        (test.ts_table): add unit tests
 
 2016-12-01  Enrico Schumann  <es@enricoschumann.net>
 
-	* man/read_ts_tables.Rd: add help file
+        * man/read_ts_tables.Rd: add help file
 
 2016-11-30  Enrico Schumann  <es@enricoschumann.net>
 
-	* NAMESPACE: import datetimeutils::isBusinessDay
+        * NAMESPACE: import datetimeutils::isBusinessDay
 
 2016-11-25  Enrico Schumann  <es@enricoschumann.net>
 
-	* DESCRIPTION (Version): 0.1-1
+        * DESCRIPTION (Version): 0.1-1
 
-	* R/functions.R (as.ts_table): add function
-	(as.ts_table.zoo): add method
-	(as.zoo.ts_table): add method
+        * R/functions.R (as.ts_table): add function
+        (as.ts_table.zoo): add method
+        (as.zoo.ts_table): add method
 
 2016-11-24  Enrico Schumann  <es@enricoschumann.net>
 
-	* R/functions.R (ttime): add function
-	(write_ts_table): add function
-	(read_ts_tables): add function
-	(ts_table): add function
-	(as.data.frame.ts_table, print.ts_table): add
-	methods
+        * R/functions.R (ttime): add function
+        (write_ts_table): add function
+        (read_ts_tables): add function
+        (ts_table): add function
+        (as.data.frame.ts_table, print.ts_table): add
+        methods
