--- a/README.org
+++ b/README.org
@@ -114,18 +114,19 @@
 
 * About tsdb
 
-A terribly-simple data base for numeric time series. All series
-are saved as CSV files. The package offers utilities
-for saving files in a standardised format, and for
-retrieving and joining data.
+A terribly-simple data base for numeric time
+series. All series are saved as CSV files. The package
+offers utilities for saving files in a standardised
+format, and for retrieving and joining data.
 
 ** Good things about tsdb
 
 - no setup needed, no system dependencies
   (i.e. external software, such as a database)
 - completely portable; moving from one computer to
-  another requires no effort (the only thing to take
-  care of is file encoding)
+  another requires no effort other than copying the
+  files (the only thing to take care of is file
+  encoding if non-ASCII column names are used)
 - data usable by other software
 
 
@@ -172,7 +173,7 @@ ts
 : 5 rows [2016-01-01 -> 2016-01-05]: A
 
 Note that we had to provide a column name (=A=) for the
-data. That is not optional. It is one of the things
+data. This is not optional. It is one of the things
 that =ts_table= enforces. Another is that timestamps
 need to be of class =Date= or =POSIXct=.
 
@@ -199,7 +200,8 @@ The written file will look like this:
 You may notice that the dates have been replaced by
 numbers. The mapping between these numbers and calendar
 times is described later, when we discuss the
-representation of timestamps.
+representation of timestamps. (But if you can't wait:
+it is the number of days since 1 January 1970.)
 
 Let us write a second file. This time, we use
 =ts_table= directly.
@@ -268,6 +270,7 @@ The written file looks like this:
 16810,10,20
 #+END_EXAMPLE
 
+
 ** Reading data                                              
 
 Use the function =read_ts_tables=.
@@ -324,8 +327,9 @@ More convenient may be to specify a =return.class=.
 
 But wait. We provided and wrote to the file values for
 1 January to 5 January. But we only got values for 1, 4
-and 5 January. The reason is that tsdb was written with
-financial data in mind, and on weekends there are no prices.
+and 5 January. The reason is that =tsdb= was written
+with financial data in mind, and on weekends there are
+no prices.
 #+BEGIN_SRC R :session *R* :results output :exports both
 weekdays(as.Date("2016-1-1")+0:4)
 #+END_SRC
@@ -379,9 +383,10 @@ a single table, but we read tables.
 10 2016-01-10                       NA                       20
 #+end_example
 
-The column names of the returned object consist of the filepaths and
-the column, which may be more information than we actually want. The
-argument =column.name= specifies the format; its default is
+The column names of the returned object consist of the
+filepaths and the column, which may be more information
+than we actually want. The argument =column.name=
+specifies the format; its default is
 =%dir%/%file%::%column%=.
 #+BEGIN_SRC R :session *R* :results output :exports both
   read_ts_tables(c("example1", "example2"),
@@ -408,8 +413,8 @@ argument =column.name= specifies the format; its default is
 #+end_example
 
 
-Missing values are by default set to =NA=. That happens even for
-missing columns, with a warning, though.
+Missing values are by default set to =NA=. That happens
+even for missing columns, with a warning though.
 #+BEGIN_SRC R :session *R* :results output :exports both
   read_ts_tables(c("example1", "example2"),
 		 dir = "~/tsdb/daily",
@@ -458,8 +463,8 @@ In read_ts_tables(c("example1", "example2"), dir = "~/tsdb/daily",  :
 - columns :: a character vector that provides the
              columns names
 
-(There may be other attributes as well, but these three
-are always present.)
+There may be other attributes as well, but these three
+are always present.
 
 A =ts_table= is not meant as a time-series class. For
 most computations (plotting, calculation of statistics,
@@ -467,15 +472,15 @@ etc), the =ts_table= must first be coerced to =zoo=, =xts=,
 a data-frame or a similar data structure. Methods that
 perform such coercions are responsible for converting
 the numeric timestamp vector to an actual
-timestamp. For this, they may use the internal function
+timestamp. For this, they may use the function
 =ttime=, whose pronounciation may remind you of a hot
 beverage, but which really stands for =translate time=.
 
 
 ** The file format
 
-   tsdb can store and load time-series data. The format
-   it uses is plain CSV; a sample file may look as
+   =tsdb= can store and load time-series data. The format
+   it uses is plain CSV. A sample file may look as
    follows:
 
 #+BEGIN_EXAMPLE
@@ -491,19 +496,19 @@ beverage, but which really stands for =translate time=.
    names of the columns, with the first column always
    being named =timestamp=.
 
-The advantage of this plain format is that the data are
-in no way dependent on =tsdb=. The files can be used
-and manipulated by other software as well.
+   The advantage of this plain format is that the data
+   are in no way dependent on =tsdb=. The files can be
+   used and manipulated by other software as well.
 
 
 ** Timestamps
   :PROPERTIES:
-  :CUSTOM_ID: sec:timestamps
+  :CUSTOM_ID: timestamps
   :END:
 
   Two types of timestamps are supported: =Date= and
   =POSXIct=. As part of a =ts_table=, timestamps are
-  always stored in their numeric representation: Daily
+  always stored in their numeric representation: daily
   timestamps are represented as the number of days
   since 1 Jan 1970; intraday timestamps are the number
   of seconds since 1 Jan 1970.
