--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+v0.6-3  (2019-06-14)
+
+  o read_ts_tables: fixed -- column names are no
+    longer changed when series are read
+    (before, column names were by mistake changed
+    into `syntactically valid names'; e.g., spaces
+    in names were substituted by dots '.')
+
 v0.6-1  (2019-03-26)
 
   o various documentation updates
