[read_ts_tables] Add argument 'timestamp'
When 'timestamp' is specified, the function will
return data only for the times in 'timestamp'.

Reading a single file is more efficient, both in terms
of speed and memory use (which matters only for large
files, with e.g. more than a million rows).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,14 @@
+2019-07-31  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/functions.R (read_ts_tables): new argument
+        'timestamp': if specified, only data at the
+        times in 'timestamp' are selected
+
 2019-07-29  Enrico Schumann  <es@enricoschumann.net>
 
         * R/functions.R (read_ts_tables): fixed -- when
-	'end' was missing, the function would always
-	drop weekends
+        'end' was missing, the function would always
+        drop weekends
 
 2019-06-14  Enrico Schumann  <es@enricoschumann.net>
 
@@ -12,6 +18,14 @@
         column names are no longer corrected by
         'read.table' (i.e. check.names is now set to
         FALSE)
+
+2019-03-31  Enrico Schumann  <es@enricoschumann.net>
+
+        * DESCRIPTION (Version): 0.6-2; CRAN release
+
+2019-03-26  Enrico Schumann  <es@enricoschumann.net>
+
+        * DESCRIPTION (Version): 0.6-1; see NEWS
 
 2019-03-21  Enrico Schumann  <es@enricoschumann.net>
 
