--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2019-08-15  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/functions.R (read_ts_tables): the default
+        value for 'drop.weekends' has changed from TRUE
+        to FALSE
+
+        * R/functions.R (ts_table): allow construction
+        of empty 'ts_table' with defined columns:
+
+            ts_table(columns = c("A", "B"))
+
+        * inst/unitTests/*: remove directory. Tests
+        are now in directory 'inst/tinytest' and use
+        package 'tinytest' instead of 'RUnit'
+
 2019-07-31  Enrico Schumann  <es@enricoschumann.net>
 
         * R/functions.R (read_ts_tables): new argument
